Make content wrap fixed width

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 }
 
 #wrap {
-	width: 70%;
+	width: 900px;
 	margin: auto;
 }
 
